RESOLVED FIXED91614
[GTK] Fix a crash due to an invalid assert
https://bugs.webkit.org/show_bug.cgi?id=91614
Summary [GTK] Fix a crash due to an invalid assert
Carlos Garcia Campos
Reported 2012-07-18 04:13:57 PDT
In webkitWebViewBaseContainerAdd() there's ASSERT(priv->inspectorView); that should be the opposite, since we shoulnd't have an inspector view when the inspector view is added.
Attachments
Patch (1.30 KB, patch)
2012-07-18 04:17 PDT, Carlos Garcia Campos
xan.lopez: review+
Carlos Garcia Campos
Comment 1 2012-07-18 04:17:07 PDT
Xan Lopez
Comment 2 2012-07-18 04:19:01 PDT
Comment on attachment 152985 [details] Patch Please add the explanation from comment #1 in the ChangeLog.
WebKit Review Bot
Comment 3 2012-07-18 04:20:52 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 4 2012-07-18 04:27:48 PDT
(In reply to comment #2) > (From update of attachment 152985 [details]) > Please add the explanation from comment #1 in the ChangeLog. Sure, thanks for reviewing.
Carlos Garcia Campos
Comment 5 2012-07-18 04:30:50 PDT
Note You need to log in before you can comment on or make changes to this bug.