[GTK] Fix a crash due to an invalid assert https://bugs.webkit.org/show_bug.cgi?id=91614

Reviewed by Xan Lopez.

In webkitWebViewBaseContainerAdd() there's
ASSERT(priv->inspectorView); that should be the opposite, since we
shoulnd't have an inspector view when the inspector view is added.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseContainerAdd):

Canonical link: https://commits.webkit.org/109403@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122945 268f45cc-cd09-0410-ab3c-d52691b4dbfc